--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>PortAngular</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="keywords" content="abdelrahman kamal developer Biomedical Software Engineer web apps" />
+    <meta
+      name="description"
+      content="I am Abdelrahman Kamal, I  am a full-stack developer and a multi-skilled Biomedical Software Engineer with a passion for creating web apps and  innovative solutions at the intersection of technology and healthcare.I will take care of your work and provide the value you need.From front-end design to back-end coding to database, I have the full stack development skills needed to bring your digital vision to life."
+    />
+    <title>Abdelrahman Kamal</title>
+  <link rel="shortcut icon" type="image/x-icon" href="images/dadabbremovebg-preview.png" />
+
+    <link rel="stylesheet" href="style.css" media="screen" />
+    <base href="/">
+    
+    <meta property="og:title" content="Abdelrahman Kamal" />
+    <meta property="og:type" content="portfolio website" />
+    <meta data-intl-tel-input-cdn-path="intlTelInput/" />
+  </head>
 <body>
   <app-root></app-root>
 </body>
